@@ -1,3 +1,6 @@
+2007-02-08	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+	* src/betaradio.c: Adjust the source code of GTK+.
+
 2007-01-21	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 	* TODO: Add this to record some ideas.
 	
